Bug 469427 - Can't edit messages after roompage update
Summary: Can't edit messages after roompage update
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-06 19:14 UTC by James Graham
Modified: 2023-05-07 17:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description James Graham 2023-05-06 19:14:54 UTC
SUMMARY
***
https://invent.kde.org/network/neochat/-/merge_requests/873 has left messages uneditable.
Comment 1 Bug Janitor Service 2023-05-07 07:37:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/968
Comment 2 Tobias Fella 2023-05-07 17:36:00 UTC
Git commit bfdca9ca9e1ad63e4319b1660fce80e196ac8473 by Tobias Fella.
Committed on 07/05/2023 at 16:17.
Pushed by tfella into branch 'master'.

Fix regressions from RoomPage refactoring

Fixes 581
Related: bug 469425

M  +0    -1    src/models/messageeventmodel.cpp
M  +9    -0    src/qml/Component/ChatBox/ChatBar.qml
M  +30   -0    src/qml/Component/Timeline/TimelineContainer.qml
M  +14   -41   src/qml/Component/TimelineView.qml
M  +7    -2    src/qml/Page/RoomPage.qml

https://invent.kde.org/network/neochat/commit/bfdca9ca9e1ad63e4319b1660fce80e196ac8473