Fix regressions from RoomPage refactoring

Fixes 581

BUG: 469427
BUG: 469425